@@ -119,7 +119,7 @@ public class TestOrcStoragePushdown {
     }
 
     private static void createInputData() throws Exception {
-        pigServer = new PigServer(Util.getLocalTestMode());
+        pigServer = new PigServer(cluster.getExecType(), cluster.getProperties());
 
         new File(inpbasedir).mkdirs();
         new File(outbasedir).mkdirs();
@@ -162,10 +162,11 @@ public class TestOrcStoragePushdown {
         }
         bw.close();
 
+        Util.copyFromLocalToCluster(cluster, inputTxtFile, inputTxtFile);
+
         // Store only 1000 rows in each row block (MIN_ROW_INDEX_STRIDE is 1000. So can't use less than that)
         pigServer.registerQuery("A = load '" + Util.generateURI(inputTxtFile, pigServer.getPigContext()) + "' as (f1:boolean, f2:int, f3:int, f4:int, f5:long, f6:float, f7:double, f8:bytearray, f9:chararray, f10:datetime, f11:bigdecimal);");
-        pigServer.registerQuery("store A into '" + Util.generateURI(INPUT, pigServer.getPigContext()) +"' using OrcStorage('-r 1000 -s 100000');");
-        Util.copyFromLocalToCluster(cluster, INPUT, INPUT);
+        pigServer.registerQuery("store A into '" + INPUT +"' using OrcStorage('-r 1000 -s 100000');");
     }
 
     @AfterClass
